# kanban

./: .dockerignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  db.py  main.py  settings.py
backend/app/static/: index.html  login.html
backend/tests/: conftest.py  test_ai.py  test_ai_board.py  test_app.py
docs/: API.md  DATABASE_SCHEMA.md  PLAN.md  SETUP.md  code_review.md
frontend/: AGENTS.md  README.md  package.json  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/app/login/: page.tsx
frontend/src/components/: AIChatSidebar.test.tsx  AIChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LoginForm.test.tsx  LoginForm.tsx  LogoutButton.test.tsx  LogoutButton.tsx  NewCardForm.tsx
frontend/src/lib/: boardApi.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
